# mkdocs-openapi-docs-gen-plugin

./: pyproject.toml
src/openapi_docs_gen/: __init__.py  plugin.py
